[tool.poetry]
name = "kraken-pp-parser"
version = "0.1.0"
description = ""
authors = ["kianenigma <kian@parity.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.3"
numpy = "2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
